--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -835,14 +835,18 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(250, 250, 250, var(--tw-bg-opacity));
 }
-.bg-primary-dark {
-	--tw-bg-opacity: 1;
-	background-color: rgba(0, 74, 124, var(--tw-bg-opacity));
-}
 .bg-secondary-dark {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 86, 145, var(--tw-bg-opacity));
 }
+.bg-primary-dark {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+/* .bg-primary-dark {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 74, 124, var(--tw-bg-opacity));
+} */
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -939,13 +943,17 @@ video {
 .tracking-wider {
 	letter-spacing: 0.05em;
 }
-.text-white {
+.text-black {
 	--tw-text-opacity: 1;
-	color: rgba(255, 255, 255, var(--tw-text-opacity));
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 .text-red-500 {
 	--tw-text-opacity: 1;
 	color: rgba(239, 68, 68, var(--tw-text-opacity));
+}
+.text-white {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 .text-gray-300 {
 	--tw-text-opacity: 1;
@@ -962,10 +970,6 @@ video {
 .text-primary-dark {
 	--tw-text-opacity: 1;
 	color: rgba(0, 74, 124, var(--tw-text-opacity));
-}
-.text-black {
-	--tw-text-opacity: 1;
-	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 .text-gray-700 {
 	--tw-text-opacity: 1;
