--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -588,14 +588,17 @@ video {
 .relative {
 	position: relative;
 }
-.top-0 {
+.inset-0 {
 	top: 0px;
-}
-.bottom-0 {
+	right: 0px;
 	bottom: 0px;
+	left: 0px;
 }
 .z-50 {
 	z-index: 50;
+}
+.z-40 {
+	z-index: 40;
 }
 .z-0 {
 	z-index: 0;
@@ -608,9 +611,6 @@ video {
 }
 .col-end-3 {
 	grid-column-end: 3;
-}
-.col-end-2 {
-	grid-column-end: 2;
 }
 .row-start-2 {
 	grid-row-start: 2;
@@ -639,9 +639,6 @@ video {
 .float-right {
 	float: right;
 }
-.m-4 {
-	margin: 1rem;
-}
 .m-6 {
 	margin: 1.5rem;
 }
@@ -657,26 +654,37 @@ video {
 	margin-top: 1.5rem;
 	margin-bottom: 1.5rem;
 }
-.mx-4 {
-	margin-left: 1rem;
-	margin-right: 1rem;
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
 }
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 }
-.mx-auto {
-	margin-left: auto;
-	margin-right: auto;
-}
 .mr-2 {
 	margin-right: 0.5rem;
 }
-.mr-4 {
-	margin-right: 1rem;
+.mr-1 {
+	margin-right: 0.25rem;
+}
+.mb-1 {
+	margin-bottom: 0.25rem;
+}
+.ml-auto {
+	margin-left: auto;
+}
+.ml-3{
+	margin-left: 1rem;
+}
+.ml-1{
+	margin-left: 0.25rem;
 }
 .mr-3 {
 	margin-right: 0.75rem;
+}
+.block {
+	display: block;
 }
 .inline {
 	display: inline;
@@ -705,9 +713,6 @@ video {
 .h-16 {
 	height: 4rem;
 }
-.h-8 {
-	height: 2rem;
-}
 .h-screen {
 	height: 100vh;
 }
@@ -717,17 +722,14 @@ video {
 .w-6 {
 	width: 1.5rem;
 }
-.w-5 {
-	width: 1.25rem;
+.w-auto {
+	width: auto;
 }
 .w-full {
 	width: 100%;
 }
-.w-8 {
-	width: 2rem;
-}
-.w-72 {
-	width: 18rem;
+.w-5 {
+	width: 1.25rem;
 }
 .w-screen {
 	width: 100vw;
@@ -744,6 +746,12 @@ video {
 .max-w-screen-2xl {
 	max-width: 1536px;
 }
+.max-w-3xl {
+	max-width: 48rem;
+}
+.flex-auto {
+	flex: 1 1 auto;
+}
 .flex-1 {
 	flex: 1 1 0%;
 }
@@ -756,11 +764,20 @@ video {
 .grid-rows-layout-desktop {
 	grid-template-rows: 4rem 300px 1fr 4rem;
 }
+.flex-col {
+	flex-direction: column;
+}
+.items-start {
+	align-items: flex-start;
+}
 .items-center {
 	align-items: center;
 }
 .items-baseline {
 	align-items: baseline;
+}
+.justify-end {
+	justify-content: flex-end;
 }
 .justify-center {
 	justify-content: center;
@@ -776,10 +793,19 @@ video {
 	margin-right: calc(-1px * var(--tw-space-x-reverse));
 	margin-left: calc(-1px * calc(1 - var(--tw-space-x-reverse)));
 }
+.divide-y-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-divide-y-reverse: 0;
+	border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
+	border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
+}
 .divide-y > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-y-reverse: 0;
 	border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
 	border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+.divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
+	--tw-divide-opacity: 1;
+	border-color: rgba(243, 244, 246, var(--tw-divide-opacity));
 }
 .divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-opacity: 1;
@@ -794,14 +820,28 @@ video {
 .overflow-y-auto {
 	overflow-y: auto;
 }
+.overflow-x-hidden {
+	overflow-x: hidden;
+}
 .whitespace-nowrap {
 	white-space: nowrap;
+}
+.rounded {
+	border-radius: 0.25rem;
+}
+.rounded-lg {
+	border-radius: 0.5rem;
 }
 .rounded-md {
 	border-radius: 0.375rem;
 }
-.rounded-lg {
-	border-radius: 0.5rem;
+.rounded-t {
+	border-top-left-radius: 0.25rem;
+	border-top-right-radius: 0.25rem;
+}
+.rounded-b {
+	border-bottom-right-radius: 0.25rem;
+	border-bottom-left-radius: 0.25rem;
 }
 .rounded-l-md {
 	border-top-left-radius: 0.375rem;
@@ -811,6 +851,9 @@ video {
 	border-top-right-radius: 0.375rem;
 	border-bottom-right-radius: 0.375rem;
 }
+.border-0 {
+	border-width: 0px;
+}
 .border {
 	border-width: 1px;
 }
@@ -819,6 +862,12 @@ video {
 }
 .border-b {
 	border-bottom-width: 1px;
+}
+.border-t {
+	border-top-width: 1px;
+}
+.border-solid {
+	border-style: solid;
 }
 .border-gray-300 {
 	--tw-border-opacity: 1;
@@ -835,18 +884,10 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(250, 250, 250, var(--tw-bg-opacity));
 }
-.bg-secondary-dark {
+.bg-pink-500 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(0, 86, 145, var(--tw-bg-opacity));
+	background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
 }
-.bg-primary-dark {
-	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-/* .bg-primary-dark {
-	--tw-bg-opacity: 1;
-	background-color: rgba(0, 74, 124, var(--tw-bg-opacity));
-} */
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -854,27 +895,47 @@ video {
 .bg-transparent {
 	background-color: transparent;
 }
+.bg-black {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+.bg-primary-dark {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 85,85, var(--tw-bg-opacity));
+}
 .p-5 {
 	padding: 1.25rem;
 }
+.p-1 {
+	padding: 0.25rem;
+}
+.p-6 {
+	padding: 1.5rem;
+}
+.p-4 {
+	padding: 1rem;
+}
+.p-3 {
+	padding: 0.75rem;
+}
 .p-2 {
 	padding: 0.5rem;
-}
-.py-5 {
-	padding-top: 1.25rem;
-	padding-bottom: 1.25rem;
 }
 .px-6 {
 	padding-left: 1.5rem;
 	padding-right: 1.5rem;
 }
+.py-3 {
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
+}
 .py-2 {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
 }
-.px-3 {
-	padding-left: 0.75rem;
-	padding-right: 0.75rem;
+.py-5 {
+	padding-top: 1.25rem;
+	padding-bottom: 1.25rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -888,10 +949,6 @@ video {
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 }
-.py-3 {
-	padding-top: 0.75rem;
-	padding-bottom: 0.75rem;
-}
 .text-left {
 	text-align: left;
 }
@@ -901,21 +958,21 @@ video {
 .align-middle {
 	vertical-align: middle;
 }
-.text-2xl {
-	font-size: 1.5rem;
-	line-height: 2rem;
-}
 .text-sm {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
 }
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
 .text-lg {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
-}
-.text-base {
-	font-size: 1rem;
-	line-height: 1.5rem;
 }
 .text-xs {
 	font-size: 0.75rem;
@@ -928,20 +985,27 @@ video {
 .font-bold {
 	font-weight: 700;
 }
-.font-medium {
-	font-weight: 500;
-}
-.font-normal {
-	font-weight: 400;
-}
 .font-semibold {
 	font-weight: 600;
+}
+.font-medium {
+	font-weight: 500;
 }
 .uppercase {
 	text-transform: uppercase;
 }
+.leading-none {
+	line-height: 1;
+}
+.leading-relaxed {
+	line-height: 1.625;
+}
 .tracking-wider {
 	letter-spacing: 0.05em;
+}
+.text-white {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 .text-black {
 	--tw-text-opacity: 1;
@@ -951,17 +1015,9 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(239, 68, 68, var(--tw-text-opacity));
 }
-.text-white {
-	--tw-text-opacity: 1;
-	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
-}
-.text-secondary-light {
-	--tw-text-opacity: 1;
-	color: rgba(250, 250, 250, var(--tw-text-opacity));
 }
 .text-gray-500 {
 	--tw-text-opacity: 1;
@@ -977,6 +1033,12 @@ video {
 }
 .underline {
 	text-decoration: underline;
+}
+.opacity-5 {
+	opacity: 0.05;
+}
+.opacity-25 {
+	opacity: 0.25;
 }
 .opacity-75 {
 	opacity: 0.75;
@@ -1000,6 +1062,11 @@ video {
 .filter {
 	filter: var(--tw-filter);
 }
+.transition-all {
+	transition-property: all;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
 .transition-opacity {
 	transition-property: opacity;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1017,8 +1084,11 @@ video {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
-.duration-200 {
-	transition-duration: 200ms;
+.duration-150 {
+	transition-duration: 150ms;
+}
+.ease-linear {
+	transition-timing-function: linear;
 }
 
 .active {
@@ -1026,14 +1096,14 @@ video {
 	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
 }
 
-.hover\:bg-primary-dark:hover {
+.hover\:bg-blue-600:hover {
 	--tw-bg-opacity: 1;
-	background-color: rgba(0, 74, 124, var(--tw-bg-opacity));
+	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
 }
 
 .hover\:bg-secondary-dark:hover {
 	--tw-bg-opacity: 1;
-	background-color: rgba(0, 86, 145, var(--tw-bg-opacity));
+	background-color: rgba(6,154,142, var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-50:hover {
@@ -1046,6 +1116,11 @@ video {
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
+.hover\:text-blue-200:hover {
+	--tw-text-opacity: 1;
+	color: rgba(191, 219, 254, var(--tw-text-opacity));
+}
+
 .hover\:text-gray-300:hover {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
@@ -1055,9 +1130,24 @@ video {
 	opacity: 1;
 }
 
+.hover\:shadow-lg:hover {
+	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .focus\:border-primary-dark:focus {
 	--tw-border-opacity: 1;
 	border-color: rgba(0, 74, 124, var(--tw-border-opacity));
+}
+
+.focus\:outline-none:focus {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+}
+
+.active\:bg-pink-600:active {
+	--tw-bg-opacity: 1;
+	background-color: rgba(219, 39, 119, var(--tw-bg-opacity));
 }
 
 @media (min-width: 640px) {
@@ -1103,6 +1193,10 @@ video {
 	.lg\:mx-12 {
 		margin-left: 3rem;
 		margin-right: 3rem;
+	}
+
+	.lg\:w-1\/3 {
+		width: 33.333333%;
 	}
 
 	.lg\:px-12 {
